--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'ch.qos.logback:logback-classic:1.2.2'
     compile 'mysql:mysql-connector-java:5.1.38'
+    compile 'org.hibernate:hibernate-core:5.2.9.Final'
 
 }
 
