--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -5,3 +5,5 @@ web.adminPassword = root
 ftp.host = localhost
 ftp.login = mantis
 ftp.password = mantis
+
+web.soapUrl = http://localhost/mantisbt-1.2.19/api/soap/mantisconnect.php
